# Performance-Evaluation-of-Link-Adaptation-Algorithms-in-5G-pt.-2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cca-perf-ai-py.cc  cca-perf-ai-py_old.cc  cca-perf-clientapp.cc  cca-perf-clientapp.h  cca-perf-graph.py  cca-perf-headerapp.cc  cca-perf-headerapp.h  cca-perf-serverapp.cc  cca-perf-serverapp.h  cca-perf.cc  cca-perf.py  cca-perf.sh  cca-sim-backup.sh  download.sh  experiment-1.ipynb  graph_all.sh  graph_gamma.py  graph_parallel.py  main-lib-amc.sh  main-lib-backup.sh  main-lib-install.sh  packet-error-rate.py  packet-error-rate.sh  parallel.sh  parameters.ccaperf  physical-scenarios.cc  physical-scenarios.h  test_ared.txt  test_codel.txt
contrib/dash/model/: tcp-stream-client.cc  tcp-stream-interface.h  tcp-stream-server.cc
contrib/nr/helper/: nr-phy-rx-trace.cc
contrib/nr/model/: nr-amc.cc  nr-amc.h  nr-mac-scheduler-lcg.cc
docs/: cca-perf_install.sh  ns3_prerequisites.sh
lib/: amc.py  aqm.py  cca-perf-lib.sh  simutils.py
src/buildings/model/: building.cc  building.h  buildings-propagation-loss-model.cc  buildings-propagation-loss-model.h
src/internet/model/: tcp-bbr.cc  tcp-bbr.h  tcp-bbrv2-wip.cc  tcp-bbrv2-wip.h  tcp-rx-buffer.cc
src/lte/model/: lte-enb-rrc.cc  lte-rlc-um.cc  lte-rlc-um.h  lte-ue-rrc.cc
src/propagation/model/: three-gpp-propagation-loss-model.cc  three-gpp-propagation-loss-model.h
src/quic/model/: quic-header.cc  quic-socket-tx-scheduler.cc  quic-subheader.cc  quic-transport-parameters.cc
